--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,12 @@ repository = "https://github.com/piuma-os/limone"
 include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [dependencies]
+
+
+[package.metadata.docs.rs]
+targets = [
+    "x86_64-unknown-none",
+    "aarch64-unknown-none",
+    "riscv64gc-unknown-none-elf",
+    "loongarch64-unknown-none",
+]
