--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "limone"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2021"
 license = "Apache-2.0"
 authors = ["Federico Maria Morrone <contact@morrone.dev>"]
@@ -15,8 +15,8 @@ include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [package.metadata.docs.rs]
 targets = [
-    "x86_64-unknown-linux-gnu",
-    "aarch64-unknown-linux-gnu",
-    "riscv64gc-unknown-linux-gnu",
-    "loongarch64-unknown-linux-gnu",
+    "x86_64-unknown-none",
+    "aarch64-unknown-none",
+    "riscv64gc-unknown-none-elf",
+    "loongarch64-unknown-none",
 ]
